# pegainfer

./: Cargo.toml  README.md
bench_snapshots/rtx-5070-ti/: qwen3-4b.json
docs/: index.md
docs/benchmarks/: mixed-load-itl.md  mixed-load-itl.qwen3-4b.json  qwen3-4b-serving-vllm-rtx5090.md
docs/conventions/: bench-regression.md
docs/models/deepseek-v2-lite/: decode-attribution-gate.md  status.md
docs/models/kimi-k2/: bringup-history.md  dp1-tp8-ep8-performance.md  roadmap.md
docs/models/qwen3/: roadmap.md
docs/models/qwen35/: chunked-prefill.md
docs/projects/: qwen3-kv-pressure-hang.md
docs/projects/deepseek-v4/: decode-performance.md  http-serving-benchmark.md
docs/subsystems/scheduler/: scheduler.md
openinfer-build/: Cargo.toml
openinfer-build/src/: lib.rs
openinfer-comm/crates/openinfer-comm-a2a-kernels/: Cargo.toml  build.rs
openinfer-comm/crates/openinfer-comm-cuda-sys/: Cargo.toml  build.rs
openinfer-comm/crates/openinfer-comm-cudart-sys/: Cargo.toml  build.rs
openinfer-comm/crates/openinfer-comm-gdrapi-sys/: Cargo.toml  build.rs
openinfer-comm/crates/openinfer-comm-libibverbs-sys/: Cargo.toml  build.rs
openinfer-comm/crates/openinfer-comm-torch-lib/: Cargo.toml  build.rs
openinfer-core/src/: ops.rs
openinfer-cupti/: Cargo.toml  build.rs
openinfer-deepseek-v2-lite/: Cargo.toml
openinfer-deepseek-v2-lite/src/: lib.rs  runtime.rs
openinfer-deepseek-v2-lite/src/runtime/: moe.rs  readiness.rs  routing.rs
openinfer-deepseek-v2-lite/src/runtime/readiness/: tests.rs
openinfer-deepseek-v2-lite/tests/: e2e_ep2.rs
openinfer-kernels/: Cargo.toml  build.rs
openinfer-kernels/csrc/qwen35/: gated_delta_rule.cu
openinfer-kernels/csrc/shared/: paged_attention.cu
openinfer-kernels/src/: ops.rs
openinfer-kernels/src/ffi/: shared.rs
openinfer-kernels/src/ops/: attention.rs
openinfer-qwen3-4b/: Cargo.toml
openinfer-qwen3-4b/src/: batch_decode_buffers.rs  batch_decode_trace.rs  executor.rs  lib.rs  weights.rs
openinfer-qwen3-4b/src/eagle3/: forward.rs
openinfer-qwen3-4b/tests/: batch_invariance_decode_splitkv_graph.rs  dflash_speculative_gate.rs  dflash_speculative_perf.rs  eagle3_speculative_perf.rs
openinfer-qwen35-4b/: Cargo.toml
openinfer-qwen35-4b/src/: scheduler.rs
openinfer-qwen35-4b/src/scheduler/: plan.rs
openinfer-qwen35-4b/tests/: chunked_prefill.rs
openinfer-server/src/: config.rs  main.rs
openinfer-vllm-frontend/src/: bridge.rs
pegainfer-deepseek-v4/: Cargo.toml
pegainfer-deepseek-v4/src/runtime/: indexer.rs
pegainfer-kernels/: KERNELS.md
pegainfer-kernels/csrc/deepep/: deepep.h  deepep_shim.cu
pegainfer-kernels/csrc/kimi_k2/: kimi_router.cu
pegainfer-kernels/src/: ffi.rs
pegainfer-kernels/src/ffi/: deepep.rs  deepseek.rs  kimi.rs  qwen35.rs  shared.rs
pegainfer-kernels/src/ops/: deepep.rs  lora.rs
pegainfer-kernels/src/ops/kimi_k2/: experts.rs  mla.rs  router.rs
pegainfer-kernels/tests/: deepseek_cutedsl_indexer.rs
pegainfer-kernels/tools/cutedsl/deepseek_v4/: generate.py
pegainfer-kernels/tools/deepseek_v4/: w13_grouped_fp4_bench.cu
pegainfer-kimi-k2/src/: kernel_report.rs  typed_scratch.rs
pegainfer-kimi-k2/src/runner/: moe_deepep.rs  moe_nccl.rs  moe_pplx.rs  scheduler.rs
pegainfer-kimi-k2/src/runner/worker/: cache.rs  forward.rs  state.rs
pegainfer-qwen3-4b/src/: executor.rs  lora.rs  scheduler.rs
pegainfer-qwen3-4b/tests/: context_window_in_window.rs
pegainfer-server/: Cargo.toml
pegainfer-server/src/: main.rs  vllm_frontend.rs
pegainfer-server/tests/: served_model_name.rs
pegainfer-sim/src/: main.rs
pegainfer-vllm-frontend/src/: lib.rs
scripts/: bench_http_serving.py  sweep_mixed_itl.sh
scripts/issue78_token_count/: README.md  common.sh  run_count_probe.sh  run_vllm_bench.sh  usage_probe.sh
test_data/: qwen3-4b-eagle3-golden.safetensors
tests/: test_bench_http_serving.py
tools/: qwen3_lora_live_parity.py
tools/accuracy/: dump_qwen3_4b_eagle3_golden.py
tools/bench/: qps_sweep.sh  summarize_qps_sweep.py  warm_ttft_sweep.py
