[workspace]
resolver = "3"
default-members = ["openinfer-server"]
members = [
    "openinfer-engine",
    "openinfer-vllm-frontend",
    "openinfer-sim",
    "openinfer-vllm-support",
    "openinfer-server",
    "openinfer-core",
    "openinfer-cupti",
    "openinfer-kernels",
    "openinfer-bench",
    "openinfer-build",
    "openinfer-deepseek-v4",
    "openinfer-deepseek-v2-lite",
    "openinfer-kimi-k2",
    "openinfer-qwen3-4b",
    "openinfer-qwen35-4b",
    "openinfer-kv-cache",
    "openinfer-kv-offload",
    # ---- openinfer-comm (EP all-to-all) ----
    "openinfer-comm",
    "openinfer-comm/crates/openinfer-comm-cuda-sys",
    "openinfer-comm/crates/openinfer-comm-cudart-sys",
    "openinfer-comm/crates/openinfer-comm-gdrapi-sys",
    "openinfer-comm/crates/openinfer-comm-libibverbs-sys",
    "openinfer-comm/crates/openinfer-comm-cuda-lib",
    "openinfer-comm/crates/openinfer-comm-thread-lib",
    "openinfer-comm/crates/openinfer-comm-proc-lib",
    "openinfer-comm/crates/openinfer-comm-logging-lib",
    "openinfer-comm/crates/openinfer-comm-torch-lib",
    "openinfer-comm/crates/openinfer-comm-fabric-lib",
    "openinfer-comm/crates/openinfer-comm-fabric-debug",
    "openinfer-comm/crates/openinfer-comm-a2a-kernels",
    "openinfer-comm/crates/openinfer-comm-p2p-all-to-all",
    "openinfer-comm/crates/openinfer-comm-python-ext",
    # ---- dynamo kvbm (forked from upstream, Apache-2.0) ----
    "kvbm/kvbm-logical",
]

# Inherited by dynamo-ported crates that use `edition.workspace = true` etc.
[workspace.package]
version = "1.2.0"
edition = "2024"
description = "Dynamo Inference Framework"
authors = ["NVIDIA Inc. <sw-dl-dynamo@nvidia.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ai-dynamo/dynamo"
repository = "https://github.com/ai-dynamo/dynamo.git"
keywords = ["llm", "genai", "inference", "nvidia", "distributed"]

[workspace.dependencies]
# ---- dynamo (upstream via git; kvbm-logical is a local fork) ----
# Keep every ai-dynamo/dynamo dep on the SAME rev: crates from the same git
# checkout unify their shared internal deps (dynamo-tokens), mixing revs would
# split type identity.
dynamo-tokens = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884" }
dynamo-kv-hashing = { git = "https://github.com/ai-dynamo/dynamo", rev = "2623ed7dac2dbd8314277bc2df49d1ebec89a884" }
kvbm-logical = { path = "kvbm/kvbm-logical" }
# ---- third-party ----
anyhow = "1.0"
async-nats = { version = "0.45.0", features = ["service"] }
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
bincode = "2.0.1"
bindgen = "0.72.1"
bytes = { version = "1.10.1", features = ["serde"] }
bytesize = "2.3.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
cc = "1.2"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3"
comfy-table = "7.2"
criterion = { version = "0.8", features = ["html_reports"] }
crossbeam-channel = "0.5"
# 0.19.5+ required: per-symbol lazy loading keeps the cuda-12090 binding
# level from imposing a runtime driver floor (issue #263).
cudarc = { version = "0.19.7", features = [
    "cuda-12090",
    "cublas",
    "f16",
    "nccl",
    # nvrtc: embedded pegaflow-core's transfer/kernel.rs references the nvrtc
    # bindings unconditionally (its KernelBackend JIT-compiles the copy kernel).
    # Lazy per-symbol loading (0.19.5+) keeps this off the runtime driver floor,
    # so it stays compatible with the cuda-12090 binding level (issue #263).
    "nvrtc",
] }
cxx = "1.0.187"
cxx-build = "1.0.187"
dashmap = { version = "6.1.0", features = ["inline"] }
derive_builder = "0.20"
derive-getters = "0.5"
either = { version = "1.13", features = ["serde"] }
etcd-client = { version = "0.17.0", features = ["tls"] }
fastrace = { version = "0.7.17", features = ["enable"] }
futures = "0.3"
half = { version = "2.7", features = ["num-traits"] }
humantime = "2.2.0"
hex = "0.4"
indexmap = "2"
is-terminal = "0.4"
log = "0.4"
logforth = { version = "0.29", features = ["starter-log", "layout-text", "diagnostic-task-local"] }
libc = "0.2"
memmap2 = "0.9"
mio = "=1.1.1"
mockall = "0.13.1"
nvtx = "1.3.0"
once_cell = "1.21.3"
opentelemetry = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "logs", "rt-tokio"] }
ordered-float = "4"
oneshot = "0.1.11"
parking_lot = "0.12.5"
openinfer-bench = { path = "openinfer-bench" }
openinfer-build = { path = "openinfer-build" }
openinfer-core = { path = "openinfer-core" }
openinfer-kv-cache = { path = "openinfer-kv-cache" }
openinfer-kv-offload = { path = "openinfer-kv-offload" }
openinfer-cupti = { path = "openinfer-cupti" }
openinfer-deepseek-v4 = { path = "openinfer-deepseek-v4" }
openinfer-engine = { path = "openinfer-engine" }
openinfer-kernels = { path = "openinfer-kernels" }
openinfer-kimi-k2 = { path = "openinfer-kimi-k2" }
openinfer-qwen3-4b = { path = "openinfer-qwen3-4b" }
openinfer-qwen35-4b = { path = "openinfer-qwen35-4b" }
openinfer-deepseek-v2-lite = { path = "openinfer-deepseek-v2-lite" }
openinfer-vllm-frontend = { path = "openinfer-vllm-frontend" }
openinfer-vllm-support = { path = "openinfer-vllm-support" }
openinfer-comm = { path = "openinfer-comm" }
pkg-config = "0.3.32"
prometheus = "0.14"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
pyo3 = { version = "0.27.1", features = ["anyhow"] }
rand = "0.10"
smallvec = { version = "1.15.1", features = ["serde", "union"] }
syscalls = "0.7.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
rmp-serde = "1.3"
rmpv = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
sha2 = "0.11"
tmq = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "1.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing-opentelemetry = "0.32.0"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
velo = "0.1.0"
vllm-engine-core-client = { git = "https://github.com/vllm-project/vllm.git", rev = "5d5591d99bb7b2ba695766a992dc328ca5867a4c" }
vllm-server = { git = "https://github.com/vllm-project/vllm.git", rev = "5d5591d99bb7b2ba695766a992dc328ca5867a4c" }
vllm-text = { git = "https://github.com/vllm-project/vllm.git", rev = "5d5591d99bb7b2ba695766a992dc328ca5867a4c" }
vllm-tokenizer = { git = "https://github.com/vllm-project/vllm.git", rev = "5d5591d99bb7b2ba695766a992dc328ca5867a4c" }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
zeromq = { version = "0.6.0", default-features = false, features = [
    "tokio-runtime",
    "all-transport",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints (too noisy for this codebase)
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
doc_markdown = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
upper_case_acronyms = "allow"
# Cherry-picked nursery lints
redundant_clone = "warn"
unused_peekable = "warn"
# Restriction lints worth enforcing
dbg_macro = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "allow"
print_stderr = "allow"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
