[package]
name = "openinfer-kernels"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cudarc = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
tvm-ffi = { version = "0.1.0-alpha.0", optional = true }

[build-dependencies]
cc = { workspace = true }
openinfer-build = { workspace = true }

[features]
default = []
tvm-ffi-triton-cubin = ["dep:tvm-ffi", "qwen35-4b"]
# Qwen3.5 Triton AOT kernels (GDR chunkwise prefill) — the only feature that
# needs Python + Triton at build time.
qwen35-4b = []
deepseek-v4 = []
deepseek-v4-cutedsl-diagnostic = ["deepseek-v4"]
kimi-k2 = []

[[example]]
name = "triton_cubin_tvm_ffi"
required-features = ["tvm-ffi-triton-cubin"]

[lints]
workspace = true
