[package]
edition = "2024"
links = "cuda"
name = "openinfer-comm-cuda-sys"
license = "Apache-2.0"
publish = false

[features]
# `system-bindings` is an internal sys-crate feature: when on, build.rs runs
# bindgen against the system CUDA driver headers and emits link directives for
# `libcuda`. When off, build.rs is a complete no-op and the crate exposes no
# FFI symbols. Upper crates should not turn this on directly; they should
# instead enable their own `hw-cuda` feature, which forwards to this.
default = []
system-bindings = []

[build-dependencies]
openinfer-build = { workspace = true }

bindgen = { workspace = true }
