[package]
edition = "2024"
links = "cudart"
name = "openinfer-comm-cudart-sys"
license = "Apache-2.0"
publish = false

[features]
# Internal sys-crate feature. See `openinfer-comm-cuda-sys/Cargo.toml` for the rationale.
default = []
system-bindings = []

[build-dependencies]
openinfer-build = { workspace = true }

bindgen = { workspace = true }
